--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -101,12 +101,12 @@
           .field-address__input
             = f.text_field :address, placeholder: '例) 神南 1-14-17', required: "required"
           .field-buildingname__input
-            = f.text_field :buildingname, placeholder: '例)FRAME', required: "required"
+            = f.text_field :buildingname, placeholder: '例)FRAME'
         .field-phone
           .field-phone__label
             = f.label :電話番号
           .field-phone__input
-            = f.text_field :phone,  placeholder: '例) 080-0000-0000', required: "required"
+            = f.text_field :phone,  placeholder: '例) 080-0000-0000'
         .field-birth
           .field-birthyear_id
             .field-birthyear_id__label
